# open-cuprof

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Makefile  README.md  cuprof.cuh  dgemm_example  profiler.cuh  profiler.cuh.bak  test_trace  test_trace.cpp
examples/: basic.cu  dgemm_example.cu  flash_attention_example.cu  multi_warp_example.cu  nested_events_example.cu  warp_specialized.cu
